tests/typecheck/good/type-subst-avoids-capture-2.scilla
let id_with_dummy = tfun 'A => tfun 'B => fun (x : 'A) => x in
let try_to_capture_type_var = tfun 'A => tfun 'B =>
  @id_with_dummy ('A -> 'B) Int32 in   (* Int32 must disappear *)
try_to_capture_type_var
