tests/typecheck/bad/foo-expr.scilla
let id =
  tfun 'A =>
  fun (x : 'A) =>
    x
in
id

Int32